fixing some spacing errors while adding details to the get to konw more

--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
 /* General */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     font-family: "Poppins", sans-serif;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-p{
+p {
     color: rgb(85, 85, 85);
 }
 
 /* transition */
-a, .btn{
+a, .btn {
     transition: all 0.3s ease;
 }
 
-nav, .nav-links{
+nav, .nav-links {
     display: flex;
 }
 
@@ -33,44 +33,44 @@ nav {
     height: 17vh;
 }
 
-.nav-links{
+.nav-links {
     gap: 2rem;
     font-size: 1.5rem;
     list-style: none;
 }
 
-a{
+a {
     color: black;
     text-decoration: none;
 }
 
-a:hover{
+a:hover {
     color: gray;
     text-decoration: underline;
     text-underline-offset: 1rem;
     text-decoration-color: rgb(181, 181, 181);
 }
 
-.logo{
+.logo {
     font-size: 2rem;
 }
 
-.logo:hover{
+.logo:hover {
     cursor: default;
 }
 
 /* Hamburger Menu */
 
-#hamburger-nav{
+#hamburger-nav {
     display: none;
 }
 
-.hamburger-menu{
+.hamburger-menu {
     position: relative;
     display: inline-block;
 }
 
-.hamburger-icon{
+.hamburger-icon {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -79,14 +79,14 @@ a:hover{
     cursor: pointer;
 }
 
-.hamburger-icon span{
+.hamburger-icon span {
     width: 100%;
     height: 2px;
     background-color: black;
     transition: all 0.3s ease;
 }
 
-.menu-links{
+.menu-links {
     position: absolute;
     top: 100%;
     right: 0;
@@ -107,37 +107,37 @@ a:hover{
     transition: all 0.3s ease-in-out;
 }
 
-.menu-links li{
+.menu-links li {
     list-style: none;
 }
 
-.menu-links.open{
+.menu-links.open {
     max-height: 300px;
 }
 
-.hamburger-icon.open span:first-child{
+.hamburger-icon.open span:first-child {
     transform: rotate(45deg) translate(10px, 5px);
 }
 
-.hamburger-icon.open span:nth-child(2){
+.hamburger-icon.open span:nth-child(2) {
     opacity: 0;
 }
 
-.hamburger-icon.open span:last-child{
+.hamburger-icon.open span:last-child {
     transform: rotate(-45deg) translate(10px, -5px);
 }
 
-.hamburger-icon span:first-child{
+.hamburger-icon span:first-child {
     transform: none;
     opacity: 1;
 }
 
-.hamburger-icon span:first-child{
+.hamburger-icon span:first-child {
     transform: none;
 }
 
 /* Sections */
-section{
+section {
     padding-top: 4vh;
     height: 96vh;
     margin: 0 10rem;
@@ -145,49 +145,49 @@ section{
     min-height: fit-content;
 }
 
-.section-container{
+.section-container {
     display: flex;
 }
 
 /* profile section */
-#profile{
+#profile {
     display: flex;
     justify-content: center;
     gap: 5rem;
     height: 80vh;
 }
 
-.section_pic-container{
+.section_pic-container {
     display: flex;
     height: 300px;
     width: 300px;
     margin: auto 0;
 }
 
-.section_text{
+.section_text {
     align-self: center;
     text-align: center;
 }
 
-.section_text p{
+.section_text p {
     font-weight: 600;
 }
 
-.section_text__p1{
+.section_text__p1 {
     text-align: center;
 }
 
-.section_text__p2{
+.section_text__p2 {
     font-size: 1.75rem;
     margin-bottom: 1rem;
 }
 
-.title{
+.title {
     font-size: 3rem;
     text-align: center;
 }
 
-#socials-container{
+#socials-container {
     display: flex;
     justify-content: center;
     gap: 1rem;
@@ -195,51 +195,104 @@ section{
 }
 
 /* Icons */
-.icon{
+.icon {
     cursor: pointer;
     height: 2rem;
 }
 
 /* Buttons */
-.btn-container{
+.btn-container {
     display: flex;
     justify-content: center;
     gap: 1rem;
 }
 
-.btn{
+.btn {
     font-weight: 600;
     transition: all 0.3s ease;
     padding: 1rem;
     width: 8rem;
     border-radius: 2rem;
-    
 }
 
 .btn-color-1,
-.btn-color-2{
-   border:rgb(53, 53, 53) 0.1rem solid;
+.btn-color-2 {
+    border: rgb(53, 53, 53) 0.1rem solid;
 }
 
-.btn-color-1:hover,.btn-color-2:hover{
+.btn-color-1:hover,
+.btn-color-2:hover {
     cursor: pointer;
 }
 
-btn-color-1,.btn-color-2:hover{
+.btn-color-1,
+.btn-color-2:hover {
     background: rgb(53, 53, 53);
     color: white;
 }
-.btn-color-1:hover{
-    background: rgb(53,53,53);
+
+.btn-color-1:hover {
+    background: rgb(53, 53, 53);
     color: white;
 }
-.btn-color-2{
+
+.btn-color-2 {
     background: none;
 }
 
-.btn-color-2:hover{
+.btn-color-2:hover {
     background: rgb(255, 255, 255) 0.1rem solid;
 }
-.btn-container{
-    gap: 1rem;
+
+/* about section */
+#about {
+    position: relative;
 }
+
+.about-containers {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.about-details-container {
+    justify-content: center;
+    flex-direction: column;
+}
+
+.about-containers,
+.about-details-containers {
+    display: flex;
+}
+
+.about-pic {
+    border-radius: 2rem;
+}
+
+.arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+}
+
+.details-container {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    text-align: center;
+}
+
+.section-container {
+    gap: 4rem;
+    height: 80%;
+}
+
+.section__pic-container {
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+
